--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,8 +6,8 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      monospace
-# bold_font        auto
+font_family      Adwaita Mono
+bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
 
